<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_colorize_black_24dp"
            android:title="@string/vaccine" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_healing_black_24dp"
            android:title="@string/threatment" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/appointment" />

    </group>

    <item android:title="Yardım">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_live_help_black_24dp"
                android:title="Soru Sor" />

        </menu>
    </item>

</menu>
