<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightpink"
    tools:context="com.example.trk.petmobile.PetInfoActivity">

    <!-- aşı hastalık randevu -->


    <LinearLayout
        android:layout_width="0dp"
        app:layout_constraintVertical_weight="0.5"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861">

        <TextView
            android:id="@+id/tvGenel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="40dp"
            android:gravity="center"
            android:text="@string/genel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAsi"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:text="@string/vaccine"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="38dp" />

            <CheckBox
                android:id="@+id/cbic"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="İç" />

            <CheckBox
                android:id="@+id/cbdıs"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="Dış" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnHastalik"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:text="@string/disease"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="93dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="hastalık1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="hastalık2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTedavi"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:text="@string/threatment"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="163dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:progressDrawable="@android:color/holo_green_dark" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:progressDrawable="@android:color/holo_blue_dark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRandevu"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:layout_height="wrap_content"
                android:text="@string/appointment"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="204dp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="12.12.2018"
                android:ems="10"
                android:inputType="date" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="14:30"
                android:ems="10"
                android:inputType="time" />

        </LinearLayout>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton

        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:layout_width="0dp"
        app:layout_constraintVertical_weight="0.5"
        android:layout_height="212dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032">

        <!-- image view + button -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageToUpload"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/btnUploadImage"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignTop="@+id/btnUpCamera"
                android:layout_marginLeft="40dp"
                android:layout_toEndOf="@+id/btnUpCamera"
                android:background="@drawable/ic_add_a_photo_black_24dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tamam"
                android:onClick="setProfileImage"/>


        </LinearLayout> <!-- image view + button -->

        <!-- texts -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUploadName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:hint="@string/petName" />

            <EditText
                android:id="@+id/etBirthdate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:hint="@string/BirthDate" />

            <EditText
                android:id="@+id/etGender"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:hint="@string/PetGender" />

            <EditText
                android:id="@+id/etGenus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:hint="@string/PetGenus" />

        </LinearLayout> <!-- text -->

    </LinearLayout>


</android.support.constraint.ConstraintLayout>